--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
 
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
+
     //the Android design support library
 
     // Google
